--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="normalize.css" rel="stylesheet" type="text/css" />
+  <title>mobile design</title>
+  <link href="normalize.css" rel="stylesheet" type="text/css"/>
   <link href="aboutstyle.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
-<header>
+  <header>
     <p><a href="index.html"><img src="Image/Logo.jpg" width="137" height="52"></a></p>
     <div class="searchbar">
     <form action="" method="get"> 
@@ -28,11 +28,11 @@
   </header> 
 
 
-<article class="opening">
+  <article class="opening">
   <div class="avatar">
   <img src="Image/Avatar.png" width="200" height="200">
     </div>
-  
+
   <section class="about">
     <h2>About Suzanne, Your Bun Bo Hue</h2>
     <p>I've been cooking my entire life. My mom is a Vietnamese immigrant. She raised two kids while putting herself
@@ -41,67 +41,67 @@
       parents, cooking my mom's recipes keeps me connected to her. I don't think anything connects people better than
       food does, and I hope that my home recipes bring a little bit of joy into your life.</p>
   </section>
-</article>
+  </article>
 
-<article class="bunbobae">
-<h1>About Bun Bo Bae</h1>
-<p>I started Bun Bo Bae in January 2019. I'm a full time journalist, and this blog is my passion project. I make a little bit of money on it, but it is by no means my main source of income. This means that I am extremely mindful of the brands I work with. If I'm promoting something on the blog, trust that I am giving my honest opinion and vouch for the product.</p>
+  <article class="bunbobae">
+  <h1>About Bun Bo Bae</h1>
+  <p>I started Bun Bo Bae in January 2019. I'm a full time journalist, and this blog is my passion project. I make a little bit of money on it, but it is by no means my main source of income. This means that I am extremely mindful of the brands I work with. If I'm promoting something on the blog, trust that I am giving my honest opinion and vouch for the product.</p>
 
-<img src="Image/Flower.png">
-</article>
+  <img src="Image/Flower.png">
+  </article>
 
-<article class="find">
-<h1>What You'll Find On Bun Bo Bae</h1>
-<div class="container">
-<div class="rice">
- <p><b><i>I focus mostly on easy, everyday Vietnamese recipes you might not find in restaurants.</i></b></p>
+  <article class="find">
+  <h1>What You'll Find On Bun Bo Bae</h1>
+  <div class="container">
+  <div class="rice">
+  <p><b><i>I focus mostly on easy, everyday Vietnamese recipes you might not find in restaurants.</i></b></p>
    <img src="Image/Rice.png">
    <p>While I also have recipes for iconic Vietnamese dishes like Bún bò Huế and Cà Ri Gà, my main goal is to showcase the diverse world of Vietnamese cuisine. You'll find recipes I lean on as a busy student and full time journalist, like Thịt Băm Sốt Cà Chua or Gà Roti.</p> 
-</div>
+  </div>
 
-<div class="cheesecake">
+  <div class="cheesecake">
   <p><b><i>Sometimes You'll See Non-Vietnamese or fusion food.</i></b></p>
   <img src="Image/cheesecake.png">
   <p>I was born and raised in the Chicagoland area so you'll often find Midwestern comfort foods like Turkey Tarragon Pot Pie. I'll sometimes riff on a familiar Asian dish, like with my Crab Rangoon Dip.</p>
-</div>
+  </div>
 
-<div class="cookie">
+  <div class="cookie">
   <p><b><i>All of my recipes include step by step instructions and process shots.</i></b></p>
   <img src="Image/cookie.png">
   <p>While you should follow the times and instructions in my recipes, it's important to use all your senses when cooking, including sight, taste and smell, to know when you are finished with a step.</p>
-</div>
   </div>
-</article>
+  </div>
+  </article>
 
 
-<article class="connect"> 
-<div>
-<h1>Stay Connected</h1>
-<p><b>Follow along with my daily life as a grad student and journalist</b> on my Instagram at @BunBoBaeBlog! I share snippets of what I eat on a day to day basis, my struggles getting my homework done on time, and my INTENSE love for frogs.</p>
+  <article class="connect"> 
+  <div>
+  <h1>Stay Connected</h1>
+  <p><b>Follow along with my daily life as a grad student and journalist</b> on my Instagram at @BunBoBaeBlog! I share snippets of what I eat on a day to day basis, my struggles getting my homework done on time, and my INTENSE love for frogs.</p>
 
-<p><b>You can learn a little bit more about me and my family by checking out</b> my episode on WAMU's Dish City podcast! I talk
+  <p><b>You can learn a little bit more about me and my family by checking out</b> my episode on WAMU's Dish City podcast! I talk
   about how baking and selling mooncakes with my mom every year for the Mid Autumn festival has brought me closer to my
   heritage.</p>
-</div>
-<img src="Image/muffin.png">
-</article>
+  </div>
+  <img src="Image/muffin.png">
+  </article>
 
-<article class="work">
-<h1>Want To Work With Bun Bo Bae?</h1>
-<section>
+  <article class="work">
+  <h1>Want To Work With Bun Bo Bae?</h1>
+  <section>
   <p>
     I am available for sponsored posts, recipe development, brand ambassadorships, product giveaways and anything else
     that would benefit your brand. I'm passionate about sustainability, social justice, and promoting women and BIPOC
     owned businesses. If you feel your brand's values align with mine, please feel free to <u>reach out!</u>
   </p>
 
-<button class="buttonabout">
+  <button class="buttonabout">
   <p><a href="">Contact Me!</a></p>
-</button>
-</section>
-</article>
+  </button>
+  </section>
+  </article>
 
-<footer>
+  <footer>
   <h1>SIGN UP FOR MY NEWSLETTER!</h1>
   <section class="email">
     <div class="emailform">
@@ -124,8 +124,7 @@
    </section>
   </ul>
   <p class="copyright">Copyright © 2019 - 2020 Bun Bo Bae</p>
-</footer>
-
+  </footer>
 </body>
 
 </html>
