--- a/index.html
+++ b/index.html
@@ -3,118 +3,120 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="normalize.css" rel="stylesheet" type="text/css" />
+  <title>mobile design</title>
+  <link href="normalize.css" rel="stylesheet" type="text/css"/>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
-<header>
-  <p><a href="index.html"><img src="Image/Logo.jpg" width="200" height="60"></a></p>
-  <div class="searchbar">
-  <form action="" method="get"> 
-    <input type="text">
-  </form>
-  </div>
-  <nav> 
-    <ul>
-      <li><a href="about.html">About</a></li>
-      <li><a>Recipes</a></li>
-      <li><a>Newsletter</a></li>
-      <li><a class="contact">Contact me!</a></li>
-    </ul>
-  </nav>
-</header> 
- 
-
-<article class="recipe">  
-  <section>
-  <h1>Recipes for your Vietnamese cravings</h1>
-  <p class="headtext">No need to go to a restaurant to enjoy Vietnamese food! For those that want a challenge, make sure to check out my classic noodle soup recipes.</p>
-    <button class="button1">
-    <p><a href="">Browse all recipes</a></p>
-      </button>
-  </section>
-</article>
-
-<article class="trendingpage">
-  <section class="trending">
-      <h1>Trending Recipes</h1>
-      <p class="trendingtext">My most popular recipes. Tested by me, loved by you!</p>
-      <button class="button2">
-      <p><a href="">Browse all recipes</a></p>
-       </button>
-  </section>
-
-  <section class="boluclac">
-    <p>Recipe of the day</p>
-    <h1>Vietnamese Lemongrass Grilled Pork</h1>
-    <p>Bo Luc Lac</p>
-    <button class="button3">
-    <p><a href="">View Recipe</a></p>
-      </button>
-  </section>
-
-  <section class="boluclac2">
-    <p>Recipe of the day</p>
-    <h1>Vietnamese Shaking Beef</h1>
-    <p>Bo Luc Lac</p>
-    <button class="button4">
-    <p><a href="">View Recipe</a></p>
-      </button>
-  </section>
-</article>
-
-<section class= "clear"></section>
-  
-<article class="aboutme">
-  <section class="avatar">
-    <img src="Image/Avatar.png">
-  </section>
-  <section class="introduction">
-    <h2>About Suzanne, Your Bun Bo Hue</h2>
-    <p class="textexe">I'm a journalist, professional amateur baker, noodle enthusiast and food photographer living in Washington, DC. My immigrant parents taught me everything I know about Vietnamese home cooking, and now I want to share it with you!
-</p>
-    <div class="logo">
-      <p><a href=""><img src="Image/FB Icon.png"></a></p>
-      </div>
-    <div class="logo">
-      <p><a href=""><img src="Image/Insta Icon.png"></a></p>
-    </div>
-
-    <div class="logobutton">
-      <button class="button5">
-      <p><a href="">Learn more about me</a></p>
-        </button>
-    </div>
-  </section>
-</article>
-
-<footer>
-  <h1>SIGN UP FOR MY NEWSLETTER!</h1>
-  <section class="email">
-    <div class="emailform">
+  <body>
+  <header>
+    <p><a href="index.html"><img src="Image/Logo.jpg" width="200" height="60"></a></p>
+    <div class="searchbar">
     <form action="" method="get"> 
       <input type="text">
     </form>
-      </div>
-    <button class="button6">
-    <p>Sign me Up!</p>
-      </button>
-  </section>
+    </div>
+    <nav> 
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a>Recipes</a></li>
+        <li><a>Newsletter</a></li>
+        <li><a class="contact">Contact me!</a></li>
+      </ul>
+    </nav>
+  </header> 
 
-  <ul>
-  <section class="footerline">
-    <li><a href="index.html">About</a></li>
-    <li><a>Privacy Policy</a></li>
-    <li><a>Accesibility</a></li>
-    <li><a>Contact</a></li>
-    <li><a>Media Kit</a></li>
-  </section>
-  </ul>
-  <p class="copyright">Copyright © 2019 - 2020 Bun Bo Bae</p>
-</footer>
+
+  <article class="recipe">  
+    <section>
+    <h1>Recipes for your Vietnamese cravings</h1>
+    <p class="headtext">No need to go to a restaurant to enjoy Vietnamese food! For those that want a challenge, make sure to check out my classic noodle soup recipes.</p>
+      <button class="button1">
+      <p><a href="">Browse all recipes</a></p>
+        </button>
+    </section>
+  </article>
+
+  <article class="trendingpage">
+    <section class="trending">
+        <h1>Trending Recipes</h1>
+        <p class="trendingtext">My most popular recipes. Tested by me, loved by you!</p>
+        <button class="button2">
+        <p><a href="">Browse all recipes</a></p>
+         </button>
+    </section>
+
+    <section class="boluclac">
+      <p>Recipe of the day</p>
+      <h1>Vietnamese Lemongrass Grilled Pork</h1>
+      <p>Bo Luc Lac</p>
+      <button class="button3">
+      <p><a href="">View Recipe</a></p>
+        </button>
+    </section>
+
+    <section class="boluclac2">
+      <p>Recipe of the day</p>
+      <h1>Vietnamese Shaking Beef</h1>
+      <p>Bo Luc Lac</p>
+      <button class="button4">
+      <p><a href="">View Recipe</a></p>
+        </button>
+    </section>
+  </article>
+
+  <section class= "clear"></section>
+
+  <article class="aboutme">
+    <section class="avatar">
+      <img src="Image/Avatar.png">
+    </section>
+    <section class="introduction">
+      <h2>About Suzanne, Your Bun Bo Hue</h2>
+      <p class="textexe">I'm a journalist, professional amateur baker, noodle enthusiast and food photographer living in Washington, DC. My immigrant parents taught me everything I know about Vietnamese home cooking, and now I want to share it with you!
+  </p>
+      <div class="logo">
+        <p><a href=""><img src="Image/FB Icon.png"></a></p>
+        </div>
+      <div class="logo">
+        <p><a href=""><img src="Image/Insta Icon.png"></a></p>
+      </div>
+
+      <div class="logobutton">
+        <button class="button5">
+        <p><a href="">Learn more about me</a></p>
+          </button>
+      </div>
+    </section>
+  </article>
+
+  <footer>
+    <h1>SIGN UP FOR MY NEWSLETTER!</h1>
+    <section class="email">
+      <div class="emailform">
+      <form action="" method="get"> 
+        <input type="text">
+      </form>
+        </div>
+      <button class="button6">
+      <p>Sign me Up!</p>
+        </button>
+    </section>
+
+    <ul>
+    <section class="footerline">
+      <li><a href="index.html">About</a></li>
+      <li><a>Privacy Policy</a></li>
+      <li><a>Accesibility</a></li>
+      <li><a>Contact</a></li>
+      <li><a>Media Kit</a></li>
+    </section>
+    </ul>
+    <p class="copyright">Copyright © 2019 - 2020 Bun Bo Bae</p>
+  </footer>
 
 </body>
+
 </html>
